--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet" />
+    <link rel="icon" type="iamge" href="">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
@@ -33,11 +34,11 @@
                     <li><a href="#resume">Resume</a></li>
                     <li><a href="#contact">Get in Touch</a></li>
                 </ul>
-                <div class="hamburger">
+                <div class="hamburger" onclick="myFunction(this)">
                     <!-- <i class="fa-solid fa-bars"></i> -->
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
                 </div>
             </nav>
         </div>
